@@ -123,6 +123,11 @@ function admin_menu_init() {
     $settings['basePath'] = rtrim(url(''), '/') . '/';
   }
 
+  $replacements = module_invoke_all('admin_menu_replacements');
+  if (!empty($replacements)) {
+    $settings['replacements'] = $replacements;
+  }
+
   if ($setting = variable_get('admin_menu_margin_top', 1)) {
     $settings['margin_top'] = $setting;
   }
@@ -297,6 +302,30 @@ function admin_menu_js_cache($hash = NULL) {
 }
 
 /**
+ * Implementation of hook_admin_menu_replacements().
+ */
+function admin_menu_admin_menu_replacements() {
+  $items = array();
+  if ($user_count = admin_menu_get_user_count()) {
+    $items['.admin-menu-users a'] = $user_count;
+  }
+  return $items;
+}
+
+/**
+ * Return count of online anonymous/authenticated users.
+ *
+ * @see user_block(), user.module
+ */
+function admin_menu_get_user_count() {
+  $interval   = REQUEST_TIME - variable_get('user_block_seconds_online', 900);
+  $count_anon = drupal_session_count($interval, TRUE);
+  $count_auth = drupal_session_count($interval, FALSE);
+
+  return t('@count-anon / @count-auth', array('@count-anon' => $count_anon, '@count-auth' => $count_auth));
+}
+
+/**
  * Return a rendered menu tree.
  *
  * @param $tree
@@ -448,23 +477,6 @@ function admin_menu_translated_menu_link_alter(&$item, $map) {
   // Handle items that need dynamic localization/replacement.
   if (isset($item['options']['t'])) {
     $item['title'] = t($item['title'], $item['options']['t'] + array('@username' => $user->name));
-  }
-
-  // Special processing for our user counter item.
-  if ($item['title'] == 'icon_users') {
-    // Add count of active anonymous/authenticated users.
-    // @see user_block(), user.module
-    $interval   = REQUEST_TIME - variable_get('user_block_seconds_online', 900);
-    $count_anon = drupal_session_count($interval, TRUE);
-    $count_auth = drupal_session_count($interval, FALSE);
-    $icon_users = '<img src="' . base_path() . drupal_get_path('module', 'admin_menu') . '/images/icon_users.png" width="16" height="15" alt="@title" title="@title" />';
-
-    $title = array('@title' => t('Current anonymous / authenticated users'));
-    $icon_users = strtr($icon_users, $title);
-    $item['title'] = t('@count-anon / @count-auth !icon', array('@count-anon' => $count_anon, '@count-auth' => $count_auth, '!icon' => $icon_users));
-    if (user_access('administer users')) {
-      $item['href'] = 'admin/user/user';
-    }
   }
 }
 
